# Vehicle_Detection

./: .gitignore  LICENSE  Procfile  README.md  SUMMARY.md  config.yaml  download_model.py  example_usage.py  generate_secret_key.py  main.py  pyproject.toml  render.yaml  requirements.txt  simple_enhanced_detection.py  start_web_interface.py  test_system.py  vehicle_detection.py
Dataset/labels/: Highway_0_2020-07-30_jpg.rf.7d947cc31b302b22a527ecd17d3af963.xml.txt  Highway_10_2020-07-30_jpg.rf.2a8900eefee0bcd7edf59af176174fd1.txt  Highway_115_2020-07-30_jpg.rf.7a9458af279e953cb67086bb97263d40.txt  Highway_119_2020-07-30_jpg.rf.afb2489fd245a3dc164017c5bca4b0fe.txt  Highway_123_2020-07-30_jpg.rf.b0f5d6839c1175ab5f2bf88c5f2e531b.txt  Highway_125_2020-07-30_jpg.rf.36efdb430c2c1d1fb1a82eab79b6d597.txt  Highway_129_2020-07-30_jpg.rf.f74959bef5919416528091ec988df33b.txt  Highway_166_2020-07-30_jpg.rf.b0b7a93c21fd808082b4b72e660addbd.txt  Highway_190_2020-07-30_jpg.rf.5c8c192a8d506a569c700fe801fe945e.txt  Highway_190_2020-07-30_jpg.rf.e27044002aeffe23e317169c81c2382f.txt  Highway_202_2020-07-30_jpg.rf.64ee5064cca93dd8f9e63339713a4ca1.txt  Highway_202_2020-07-30_jpg.rf.f9c7e172684091d2c9b100522217647a.txt  Highway_230_2020-07-30_jpg.rf.f68ca46fe2e8e88503be266f36fcfb2a.txt  Highway_247_2020-07-30_jpg.rf.74eb7a71d375cf04cd022159eda56063.txt  Highway_248_2020-07-30_jpg.rf.9893649a49d495280b46af27b473a60a.txt  Highway_248_2020-07-30_jpg.rf.c0731ab2651467d038cc1e8047748b9a.txt  Highway_253_2020-07-30_jpg.rf.9803ff522c73a3b5c84793c9a0fef3ce.txt  Highway_264_2020-07-30_jpg.rf.909501a37fcb971357047f5b5e5e4ceb.txt  Highway_285_2020-07-30_jpg.rf.0e63bbb577c48c6ed077580a3b3f39ec.txt  Highway_296_2020-07-30_jpg.rf.c9f5ea6f5849335c66560bde158fd0bf.txt  Highway_38_2020-07-30_jpg.rf.001b8703747453a8c0fa6e90a886ebe4.txt  Highway_38_2020-07-30_jpg.rf.52d0471174c34f937bff8f2b280775b0.txt  Highway_38_2020-07-30_jpg.rf.6b1ee2f21e270c796bdd7843e9e5cae1.txt  Highway_48_2020-07-30_jpg.rf.17b81c55f0f7bf1a8ce9ac470653daa5.txt  Highway_48_2020-07-30_jpg.rf.3124d86041495945119d088204e288b4.txt  Highway_48_2020-07-30_jpg.rf.d9156f3568adc7245e71cc87f202f0dd.txt  Highway_49_2020-07-30_jpg.rf.5af2f4a6a03196b7d1ef71bbff287f31.txt  Highway_49_2020-07-30_jpg.rf.c99678321d6761c37113ff24c21e3960.txt  Highway_4_2020-07-30_jpg.rf.f795aabbdb4dd4df635a2f036937639b.txt  Highway_55_2020-07-30_jpg.rf.1bea4edd9d104af115cd7d305e6257bf.txt  Highway_62_2020-07-30_jpg.rf.460d50d543e659c756af839d7685b648.txt  Highway_62_2020-07-30_jpg.rf.6ac1e1dd387e47269db5f5139c7af539.txt  Highway_65_2020-07-30_jpg.rf.96e11b3bc8942982e9cd64432eeffdfc.txt  Highway_72_2020-07-30_jpg.rf.d4e1158a2ea7ea08b31f3b27d4096d7c.txt  (+5 more)
backend/: app.py  requirements.txt
frontend/: index.html  script.js
test/: labels.cache
train/: labels.cache
(+37 files in other folders)
