[project]
name = "vehicle-detection-system"
version = "1.0.0"
description = "Enhanced Vehicle Detection and Classification System using YOLOv8, PyTorch, and OpenCV"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Vehicle Detection System Team", email = "contact@example.com"}
]
keywords = ["vehicle-detection", "yolo", "pytorch", "opencv", "computer-vision", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core ML/DL Libraries
    "torch==2.0.1",
    "torchvision==0.15.2",
    "ultralytics==8.3.182",
    # Computer Vision
    "opencv-python==4.11.0.86",
    # Data Science & Numerical Computing
    "numpy==1.26.4",
    "pandas==2.3.1",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    # Visualization
    "matplotlib==3.7.1",
    "seaborn==0.13.2",
    "pillow==11.3.0",
    # Utilities
    "pyyaml==6.0.2",
    "tqdm==4.67.1",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "werkzeug==2.3.7",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/vehicle-detection-system"
Documentation = "https://github.com/example/vehicle-detection-system#readme"
Repository = "https://github.com/example/vehicle-detection-system.git"
Issues = "https://github.com/example/vehicle-detection-system/issues"

[project.scripts]
vehicle-detection = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
